--- a/src/components/Todos/Todos.scss
+++ b/src/components/Todos/Todos.scss
@@ -1,33 +1,37 @@
 .todos {
-    padding: 35px;
-    &__list {
-        margin-top: 30px;
-        max-width: 700px;
-        width: 100%;
-    }
-    &__item{
-        display: flex;
-        align-items: center;
-        &:not(:last-child) {
-        margin-bottom: 10px;
-    }
-
-     &__text {
-         font-size: 20px;
-     }
-
-    }
-    &__actions{
-        margin-left: auto;
-        display: flex;
-        gap: 10px;
-
-    }
-    &__select {
-        min-width: 100px !important;
+  padding: 35px;
+  &__list {
+    margin-top: 30px;
+    max-width: 700px;
+    width: 100%;
+  }
+  &__item {
+    display: flex;
+    align-items: center;
+    &:not(:last-child) {
+      margin-bottom: 10px;
     }
 
-    &__save {
-        margin-top: 20px !important;
+    &__text {
+      font-size: 20px;
     }
+  }
+  &__actions {
+    margin-left: auto;
+    display: flex;
+    gap: 10px;
+  }
+  &__select {
+    min-width: 100px !important;
+  }
+
+  &__save {
+    margin-top: 20px !important;
+  }
+
+  &__filter {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+  }
 }
